[GRD-3891] organize monitor-worker-server services